<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_8dp"
    tools:context="com.example.anish.firebasedemo.MainActivity">

    <TextView
        android:id="@+id/txt_push_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/msg"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/edtValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_push_message"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtValue"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/add_to_firebase"
        android:textSize="8sp" />

    <Button
        android:id="@+id/btnSendPubNubNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAdd"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/send_pubnub_notification"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/txt_reg_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/reg_id" />
</RelativeLayout>
